<resources>
    <string name="app_name">integrado2</string>
    <string name="title_login">Informatec</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_register">¿Aún no te haz registrado?</string>

    <string name="title_register">¡Únete con nosotros!</string>
    <string name="label_register_name">Nombre Completo</string>
    <string name="label_register_document">Documento de Identificación</string>
    <string name="label_register_email">Email</string>
    <string name="label_register_phone">Teléfono</string>
    <string name="label_action_to_register">Unirme</string>
    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="menu_home">Home</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_reservar">Reservar</string>
    <string name="menu_myself">Mi Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
