<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@color/txt_white"
    tools:context=".MainActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="28sp"
            android:textColor="@color/txt_black"
            android:layout_marginBottom="30dp"
            android:text="@string/title_login" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="105dp"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:background="@drawable/buy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/txt_black"
            android:text="@string/label_email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textColor="@color/txt_black"
            android:id="@+id/log_email"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/txt_black"
            android:text="@string/label_password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textColor="@color/txt_black"
            android:inputType="textPassword"
            android:id="@+id/log_password"
            />

        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/Back_login"
            android:textColor="@color/txt_white"
            android:id="@+id/btn_ingresar"
            android:text="@string/btn_login"
            />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Back_login"
            android:text="@string/label_go_to_register"
            android:id="@+id/txtViewgo_to_register"
            />
    </LinearLayout>

</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>