<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    tools:context=".MySelfFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent" android:background="@color/bg_gray"
            android:id="@+id/fourth_fragment"
            android:padding="25dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="28sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/txt_black"
                android:text="Mis Datos" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="105dp"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:background="@drawable/user" />



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/txt_black"
                    android:text="@string/label_register_name" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textColor="@color/txt_black"
                    android:layout_marginBottom="20dp"
                    />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/txt_black"
                    android:text="@string/label_email" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textColor="@color/txt_black"
                    android:layout_marginBottom="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/txt_black"
                    android:text="@string/label_register_phone" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textColor="@color/txt_black"
                    android:layout_marginBottom="20dp"

                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@color/Back_login"
                    android:textColor="@color/txt_white"
                    android:text="Editar"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>